feat: add final version with animation

--- a/source/pug/about.pug
+++ b/source/pug/about.pug
@@ -14,10 +14,11 @@
     section.section-first
       include content/about-screen-1
 
-    section.section
+    section.section.section-pos
       include content/about-screen-2
 
-    include content/about-screen-3
+    section.section-pos
+      include content/about-screen-3
 
     include components/_form
 
