--- a/source/pug/content/about-screen-1.pug
+++ b/source/pug/content/about-screen-1.pug
@@ -1,4 +1,5 @@
 .first-template.about-1
+  img(src="./assets/img/about-bg.png", alt="").first-template__img
   .first-template__block
     h1.title.title-h1.first-template__title Центр 
       span DIALECTICA
