--- a/source/pug/content/departments-screen-1.pug
+++ b/source/pug/content/departments-screen-1.pug
@@ -1,4 +1,5 @@
-.first-template.departments-1
+.first-template
+  img(src="https://cnpp.ru/wp-content/uploads/2016/01/header-image-departments.jpg", alt="").first-template__img
   .first-template__block
     h1.title.title-h1.first-template__title Наши 
       span направления
