--- a/source/pug/content/main-screen-1.pug
+++ b/source/pug/content/main-screen-1.pug
@@ -1,3 +1,4 @@
+img(src="./assets/img/bg-first.png", alt="").main-1__img
 .container
   .main-1__col.main-1__col-1
     h1.main-1__title Центр <span>DIALECTICA</span> — психологическая помощь по мировым стандартам
