--- a/source/pug/content/page-screen.pug
+++ b/source/pug/content/page-screen.pug
@@ -1,4 +1,6 @@
 .first-template.page-1
+  img(src="https://cnpp.ru/wp-content/uploads/2015/12/header-cardiology.jpg", alt="").first-template__img
   .first-template__block
     h1.title.title-h1.first-template__title Семейные связи
     .title.title-h2.first-template__subtitle Бесплатный проект для семей, в которых есть человек с трудностями в регуляции эмоций и контроле поведения
+    a(href="").btn.first-template__btn Присоединиться
