--- a/source/pug/departments.pug
+++ b/source/pug/departments.pug
@@ -7,12 +7,15 @@
 </head>
 <body>
 
-  .wrapper.fix-footer
+  .wrapper.fix-footer.department
 
     include components/_header
 
     section.section-first
       include content/departments-screen-1
+
+    section.section-departments
+      include content/departments-screen
 
     include components/_footer
 
