--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -29,5 +29,7 @@
         a(href="rules.html") Правила получения услуг
       li
         a(href="course.html") Skills for life
+      li
+        a(href="page.html") Семейные связи
 </body>
 </html>
