--- a/source/pug/main.pug
+++ b/source/pug/main.pug
@@ -13,13 +13,13 @@
 
     section.section-first.main-1
       include content/main-screen-1
-    section.section
+    section.section.section-pos.main-2
       include content/main-screen-2
-    section
+    section.section-departments
       include content/departments-screen
-    section
+    section.section-pos
       include content/main-screen-3
-    section.section
+    section.section.section-pos
       include content/main-screen-4
     include components/_form
 
