--- a/source/pug/page.pug
+++ b/source/pug/page.pug
@@ -14,10 +14,10 @@
     section.section
       include content/page-screen
 
-    section
+    section.section.section-pos
       include content/page-screen-1
 
-    section.section
+    section.section.section-pos
       include content/specialist-screen
 
     include components/_form
