--- a/source/pug/rules.pug
+++ b/source/pug/rules.pug
@@ -13,6 +13,7 @@
 
     section.section.section-first
       .container
+        h1.title.title-h1 Правила получения услуг
         <object><embed src="https://cnpp.ru/wp-content/uploads/2021/07/правила-оплаты-диалектика_на-вкладку-оплаты.pdf" " width="100%" height="700px" frameborder="0" /></object>
 
     include components/_footer
