--- a/source/pug/specialists.pug
+++ b/source/pug/specialists.pug
@@ -17,6 +17,9 @@
         .specialists__row
           a(href="").btn Записаться на прием
           a(href="").btn Подобрать специалиста
+            <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M18.7397 16.5137L3.03038 0.804321L0.088044 3.74666L15.7972 19.4558H0.6422V23.6169H20.8203H22.9008V21.5364V1.35831H18.7397V16.5137Z" fill="#fff"/>
+            </svg>
         .specilists__grid.items-grid
           - for (var i = 0; i < 10; ++i)
             include ./components/_item
