--- a/source/pug/components/_form.pug
+++ b/source/pug/components/_form.pug
@@ -1,4 +1,4 @@
-section.section.form
+section.section.form.section-pos
   .form-container.container
     h2.title.title-h2.form__title Запись на первичный приём к специалисту
     .line
