--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1066,6 +1066,8 @@ textarea {
 }
 
 .first-template__block {
+  position: relative;
+  z-index: 1;
   max-width: 570px;
   margin: 0 auto;
 }
@@ -1209,6 +1211,43 @@ summary::-webkit-details-marker {
 .anchor {
   position: absolute;
   top: -84.42px;
+}
+
+.section-pos {
+  position: relative;
+  z-index: 3;
+  background: #fff;
+}
+
+.section-departments {
+  position: relative;
+  z-index: 4;
+}
+
+.header.fixed ~ section .main-1__img,
+.header.fixed ~ section .first-template__img {
+  top: 84.42px;
+}
+
+.main-1,
+.first-template {
+  position: relative;
+  overflow: hidden;
+}
+
+.main-1__img,
+.first-template__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 128.42px;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  transition: 0.3s;
 }
 
 .header {
@@ -1651,6 +1690,7 @@ textarea {
 .copyright {
   padding: 10px 0;
   text-align: center;
+  background: #fff;
 }
 
 .copyright__text {
@@ -1807,13 +1847,11 @@ textarea {
 .main-1 {
   padding: 115px 0;
   color: #fff;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url(../img/bg-first.png);
-  background-position: center;
 }
 
 .main-1 .container {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
@@ -1951,7 +1989,7 @@ textarea {
 }
 
 .main-3 {
-  padding: 175px 0 50px;
+  padding: 50px 0;
   background: #f6f6f6;
 }
 
@@ -2143,13 +2181,6 @@ textarea {
   margin-bottom: 10px;
 }
 
-.about-1 {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(0deg, rgba(74, 112, 122, 0.6), rgba(74, 112, 122, 0.6)), url(../img/about-bg.png);
-  background-position: center;
-}
-
 .about-2__row {
   display: flex;
 }
@@ -2242,16 +2273,41 @@ textarea {
   max-width: 230px;
 }
 
-.departments-1 {
-  background-image: url(https://cnpp.ru/wp-content/uploads/2016/01/header-image-departments.jpg);
+.department .section-departments .departments::before {
+  background: #e9eaee;
 }
 
 .departments {
+  position: relative;
   padding-top: 80px;
+  color: #fff;
+  padding-bottom: 125px;
+}
+
+.departments::after {
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../img/departments.png);
-  color: #fff;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+}
+
+.departments::before {
+  background: #f6f6f6;
+  height: 125px;
+  bottom: 0;
+  z-index: -1;
+}
+
+.departments::after,
+.departments::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
 
 .departments__grid {
@@ -2334,6 +2390,23 @@ textarea {
 
 .specialist__col:last-child .specialist__img {
   margin: 0 0 0 auto;
+}
+
+.specialists__row {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 50px;
+}
+
+.specialists__row .btn {
+  display: flex;
+  align-items: center;
+}
+
+.specialists__row .btn svg {
+  width: 12px;
+  height: auto;
+  margin-left: 6px;
 }
 
 .course {
@@ -2453,10 +2526,6 @@ textarea {
 .course-4__title {
   color: #3bafbf !important;
   margin-bottom: 20px;
-}
-
-.page-1 {
-  background-image: url(https://cnpp.ru/wp-content/uploads/2015/12/header-cardiology.jpg);
 }
 
 .page .specialist {
@@ -3276,7 +3345,7 @@ button.swiper-pagination-bullet {
 
 @media (max-width: 1170px) {
   .section-first {
-    margin-top: 79.5px;
+    margin-top: 84.42px;
   }
 
   .header:not(.fixed) .header__center {
@@ -3360,7 +3429,6 @@ button.swiper-pagination-bullet {
 @media (max-width: 1024px) {
   .main-1 {
     padding: 50px 0;
-    background-position: 34%;
   }
 
   .main-1 .container {
@@ -3550,6 +3618,16 @@ button.swiper-pagination-bullet {
     display: block;
   }
 
+  .header.fixed ~ section .main-1__img,
+  .header.fixed ~ section .first-template__img {
+    top: 70px;
+  }
+
+  .main-1__img,
+  .first-template__img {
+    top: 135.2px;
+  }
+
   .header {
     padding: 10px 0;
   }
@@ -3733,10 +3811,6 @@ button.swiper-pagination-bullet {
     margin-top: 30px;
   }
 
-  .about-1 {
-    background-position: left;
-  }
-
   .about-2__col-2 {
     margin: 0 -15px;
   }
@@ -3744,6 +3818,13 @@ button.swiper-pagination-bullet {
   .departments {
     padding-top: 40px !important;
     background-image: none;
+    background: #fff;
+    padding-bottom: 0;
+  }
+
+  .departments::after,
+  .departments::before {
+    content: none;
   }
 
   .departments__grid {
@@ -3844,10 +3925,6 @@ button.swiper-pagination-bullet {
     padding-bottom: 60px;
   }
 
-  .page-1 {
-    background-position: center;
-  }
-
   .page__row {
     flex-direction: column;
     gap: 20px;
@@ -3878,12 +3955,15 @@ button.swiper-pagination-bullet {
     gap: 25px;
   }
 
-  .main-1 {
-    background-position: left;
-  }
-
   .main-4__btn {
     margin: 0 auto;
+  }
+}
+
+@media (max-width: 540px) {
+  .specialists__row {
+    flex-direction: column;
+    gap: 15px;
   }
 }
 
